--- a/templates/_sidebar.html
+++ b/templates/_sidebar.html
@@ -6,7 +6,7 @@
         <a class="nav-link navbar-brand" href="#"><i class="fas fa-box-open"></i></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link navbar-brand" href="#"><i class="fas fa-cart-arrow-down"></i></a>
+        <a class="nav-link navbar-brand" href="#"><i class="fa fa-truck" aria-hidden="true"></i></a>
       </li>
     </ul>
   </div>
