--- a/templates/general/main.html
+++ b/templates/general/main.html
@@ -24,6 +24,9 @@
     <!-- Include Navbar -->
     {% include '_navbar.html' %}
 
+    <!-- Sidebar -->
+    {% block sidebar %}{% endblock %}
+
     <!-- Content -->
     {% block content %}{% endblock %}
 
