--- a/templates/general/product_reviews.html
+++ b/templates/general/product_reviews.html
@@ -4,10 +4,8 @@
 {% block content %}
 <div class="container-fluid">
   <div class="row">
-    {% include "_sidebar.html" %}
-
     <!-- Main content -->
-    <main class="col offset-1 col-md-11 ms-sm-auto col-lg-11 px-md-4">
+    <main class="col ms-sm-auto col-lg-12 px-md-4">
       <h1><i class="fas fa-star"></i> Product Reviews</h1>
 
       <table class="table">
