--- a/templates/_sidebar.html
+++ b/templates/_sidebar.html
@@ -1,12 +1,14 @@
 <!-- Sidebar -->
-<nav class="col-1 d-none d-md-block navbar vh-100 position-fixed">
+<nav class="d-none d-md-block navbar vh-100 position-fixed">
   <div class="position-sticky">
     <ul class="nav flex-column">
-      <li class="nav-item">
-        <a class="nav-link navbar-brand" href="#"><i class="fas fa-box-open"></i></a>
+      <li>
+        <a class="navbar-brand" href="{% url 'ship_product' %}"
+          ><i class="fa fa-truck" aria-hidden="true"></i
+        ></a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link navbar-brand" href="#"><i class="fa fa-truck" aria-hidden="true"></i></a>
+      <li>
+        <a class="navbar-brand" href="#"><i class="fas fa-box-open"></i></a>
       </li>
     </ul>
   </div>
