Add redestribute page

--- a/templates/_sidebar.html
+++ b/templates/_sidebar.html
@@ -8,7 +8,9 @@
         ></a>
       </li>
       <li>
-        <a class="navbar-brand" href="#"><i class="fas fa-box-open"></i></a>
+        <a class="navbar-brand" href="{% url 'redistribute_product' %}"
+          ><i class="fa fa-exchange" aria-hidden="true"></i
+        ></a>
       </li>
     </ul>
   </div>
