--- a/templates/_sidebar.html
+++ b/templates/_sidebar.html
@@ -9,7 +9,12 @@
       </li>
       <li>
         <a class="navbar-brand" href="{% url 'redistribute_product' %}"
-          ><i class="fa fa-exchange" aria-hidden="true"></i
+          ><i class="fa fa-retweet" aria-hidden="true"></i
+        ></a>
+      </li>
+      <li>
+        <a class="navbar-brand" href="{% url 'forgotten_product' %}"
+          ><i class="fa fa-archive" aria-hidden="true"></i
         ></a>
       </li>
     </ul>
