add search to forgotten page

--- a/templates/general/forgotten_product.html
+++ b/templates/general/forgotten_product.html
@@ -21,6 +21,8 @@
 <div class="container mt-4">
   <h1 class="mb-4"><b>Unutilgan Mahsulotlar</b></h1>
 
+  {% include "_search.html" %}
+
   <!-- Bootstrap Table -->
   <table class="table table-bordered shadow-lg">
     <thead class="text-center">
