--- a/templates/general/redistribute_products.html
+++ b/templates/general/redistribute_products.html
@@ -20,6 +20,8 @@
 <div class="container">
   <h1 class="mt-4">Redistribute Products</h1>
 
+  {% include "_search.html" %}
+
   <table class="table table-striped table-bordered table-hover shadow-lg">
     <thead>
       <tr>
@@ -44,7 +46,11 @@
         <td>{{ item.product_name }}</td>
         <td>{{ item.units }}</td>
       </tr>
-      {% endif %} {% endfor %} {% endfor %}
+      {% endif %} {% endfor %} {% empty %}
+      <tr>
+        <td colspan="4" class="text-center">No data available</td>
+      </tr>
+      {% endfor %}
     </tbody>
   </table>
 </div>
