--- a/templates/general/ship_products.html
+++ b/templates/general/ship_products.html
@@ -28,6 +28,7 @@
 <div class="ml-4">
   <div class="ml-5">
     <div class="container-fluid">
+      {% include "_search.html" %}
       <table class="table col-12">
         <thead>
           <tr>
@@ -57,6 +58,10 @@
               </div>
             </td>
             {% endfor %}
+          </tr>
+          {% empty %}
+          <tr>
+            <td colspan="4" class="text-center">No data available</td>
           </tr>
           {% endfor %}
         </tbody>
