--- a/templates/general/ship_products.html
+++ b/templates/general/ship_products.html
@@ -29,7 +29,8 @@
   <div class="ml-5">
     <div class="container-fluid">
       {% include "_search.html" %}
-      <table class="table col-12">
+
+      <table class="table col-12 shadow-lg">
         <thead>
           <tr>
             <th scope="col">#</th>
