--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -3,7 +3,6 @@
   class="navbar {% if active_page == 'sales_doctor' or active_page == 'ship_product' or active_page == 'redistribute_product' or active_page == 'forgotten_product' %}fixed-top{% endif %}">
   <a href="{% url 'home' %}" class="navbar-brand"><i class="fas fa-cube"></i> Xandecor</a>
   <div class="navbar-menu">
-    <span class="navbar-text"><i class="fas fa-boxes"></i> Containers List</span>
     <a
       href="{% url 'sales_doctor' %}"
       class="navbar-button {% if active_page == 'sales_doctor' %}active{% endif %}"
@@ -36,5 +35,10 @@
       <span class="badge">{{ asked_users_count }}</span>
       {% endif %}
     </a>
+    <a
+      href="{% url 'discount_product' %}"
+      class="navbar-button {% if active_page == 'discount_product' %}active{% endif %}"
+      ><i class="fas fa-percent"></i> </a
+    >
   </div>
 </div>
