--- a/templates/general/main.html
+++ b/templates/general/main.html
@@ -18,6 +18,7 @@
     <!-- Internal CSS -->
     <link rel="stylesheet" href="{% static 'css/containers.css' %}" />
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/navbar.css' %}" />
     {% block style %} {% endblock %}
   </head>
   <body>
