2 pages is added

--- a/templates/warehouse/_navbar_store.html
+++ b/templates/warehouse/_navbar_store.html
@@ -2,8 +2,7 @@
 <div>
   <a href="{% url 'home' %}" class="navbar-brand"><i class="fas fa-cube"></i> Xandecor</a>
   <div class="navbar-menu">
-    {% comment %} <ahref="{% url 'edit_product' %}"
-      class="navbar-button {% if active_page == 'edit_product' %}active{% endif %}"
-      ><i class="fas fa-edit"></i> Edit</a> {% endcomment %}
+    <ahref="#" class="navbar-button {% if active_page == 'edit_product' %}active{% endif %}">
+      <i class="fas fa-edit"></i> Edit</a>
   </div>
 </div>
